--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["@babel/preset-env", ["@babel/preset-react", { "runtime": "automatic" }]]
+  "presets": [
+    "@babel/preset-env", /* convert js flavor */
+    "@babel/preset-typescript", /* typescript support */
+    ["@babel/preset-react", { "runtime": "automatic" }] /* jsx transform */
+  ]
 }
