--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@types/webpack": "^5.28.5",
-    "del-cli": "^5.1.0",
     "prettier": "3.2.5",
     "typescript": "^5.4.5"
   },
@@ -23,6 +22,7 @@
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
     "@svgr/webpack": "^8.1.0",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
